--- a/src/main/webapp/cust_table_head/partials/custTable.html
+++ b/src/main/webapp/cust_table_head/partials/custTable.html
@@ -1,7 +1,8 @@
 <div class="container cust-tab">
     <div class="row clearfix">
         <div class="col-md-12 column mb10">
-            <button class="btn btn-info" ng-click="">合并</button>
+            <button class="btn btn-info" id="ct-merger">合并</button>
+            <button class="btn btn-info" id="ct-reset">还原</button>
         </div>
         <div class="col-md-12 column">
             <div class="table-wrap" id="custTable"></div>
