--- a/src/main/webapp/cust_table_head/partials/custTable.html
+++ b/src/main/webapp/cust_table_head/partials/custTable.html
@@ -1,11 +1,11 @@
 <div class="container cust-tab">
-    <div class="row clearfix">
-        <div class="col-md-12 column mb10">
-            <button class="btn btn-info" id="ct-merger">合并</button>
-            <button class="btn btn-info" id="ct-reset">还原</button>
+    <div class="row clearfix custTableBase">
+        <div class="col-md-12 column mb10 ct-btn">
+            <button class="btn btn-info ct-merger" >合并</button>
+            <button class="btn btn-info ct-reset" >还原</button>
         </div>
         <div class="col-md-12 column">
-            <div class="table-wrap" id="custTable"></div>
+            <div class="table-wrap custTable" ></div>
         </div>
     </div>
 </div>
