--- a/src/main/webapp/cust_table_head/partials/custTable.html
+++ b/src/main/webapp/cust_table_head/partials/custTable.html
@@ -4,8 +4,8 @@
             <button class="btn btn-info ct-merger" >合并</button>
             <button class="btn btn-info ct-reset" >还原</button>
         </div>
-        <div class="col-md-12 column">
-            <div class="table-wrap custTable" ></div>
+        <div class="col-md-12 column" >
+                <div class="table-wrap custTable" style="height:300px;border: solid 1px dodgerblue;overflow:auto" ></div>
         </div>
     </div>
 </div>
