--- a/src/main/webapp/cust_table_head/css/custTableHead.css
+++ b/src/main/webapp/cust_table_head/css/custTableHead.css
@@ -89,3 +89,8 @@
 }
 .ct th.ui-selecting { background: #40adfe; }
 .ct th.ui-selected  { background: #3e8dde; }
+
+
+.ct th {
+    background: #a3dff6;
+}
