--- a/src/main/webapp/cust_table_head/partials/custTable.html
+++ b/src/main/webapp/cust_table_head/partials/custTable.html
@@ -5,7 +5,17 @@
             <button class="btn btn-info ct-reset" >还原</button>
         </div>
         <div class="col-md-12 column" >
-                <div class="table-wrap custTable" style="height:300px;border: solid 1px dodgerblue;overflow:auto" ></div>
+                <div class="table-wrap custTable" style="height:auto;width:400px;border: solid 1px dodgerblue;" >
+                    <div class="ct-head" >
+                        <div class="ct-head-e">
+                            <div class="ct-head-i"></div>
+                        </div>
+
+                    </div>
+                    <div class="ct-body">
+                        <div class="ct-body-i"></div>
+                    </div>
+                </div>
         </div>
     </div>
 </div>
